fix: adjust carousel width on mobile view
https://jira.xima.de/browse/DKFZ-305

--- a/packages/xm_dkfz_net_prototype/source/_patterns/components/image/image.scss
+++ b/packages/xm_dkfz_net_prototype/source/_patterns/components/image/image.scss
@@ -23,7 +23,10 @@
 .frame-type-image {
 
     .carousel {
-        margin: 0 var(--default-overflow-margin-negative);
+        
+        @include media-breakpoint-up(md) {
+            margin: 0 var(--default-overflow-margin-negative);
+        }
 
         .carousel__button {
 
